# botandemo

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
BotanDemo/: .project  AndroidManifest.xml  build.gradle
BotanDemo/jni/: Application.mk
BotanDemo/jni/botan/: botan_all.cpp
BotanDemo/jni/botandemo/: botandemo.cpp  native.h
BotanDemo/res/layout/: activity_main.xml
BotanDemo/src/androidTest/java/de/tiwoc/botandemo/: ExampleInstrumentedTest.java
BotanDemo/src/de/tiwoc/botandemo/: MainActivity.java
BotanDemo/src/main/: AndroidManifest.xml
BotanDemo/src/main/java/de/tiwoc/botandemo/: Native.java
BotanDemo/src/main/jni/: Application.mk  CMakeLists.txt
BotanDemo/src/main/jni/botan/: Android.mk  CMakeLists.txt  botan_all.h
BotanDemo/src/main/jni/botandemo/: Android.mk  CMakeLists.txt  botandemo.cpp
BotanDemo/src/main/res/values/: strings.xml
BotanDemo/src/test/java/de/tiwoc/botandemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
